--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
               <div class="flex gap-5 items-center">
                 <div><img src="images/bus-logo.png" alt="bus" /></div>
                 <div>
-                  <h4 class="text-3xl raleway-700">P Paribahan</h4>
+                  <h4 class="text-4xl raleway font-bold">P Paribahan</h4>
                   <p class="text-gray-600">Coach-009-WEB ! AC_Business</p>
                 </div>
               </div>
