--- a/index.html
+++ b/index.html
@@ -371,9 +371,9 @@
                 <label for="pName" class="inter font-semibold">Email ID </label>
                 <input id="pName" type="text" placeholder="Enter your email id"
                   class="input input-bordered w-full max-w-full mt-3 mb-4" />
-                <button class="btn btn-block text-white bg-[#1DD100] hover:bg-[#1DD100]">
-                  Next
-                </button>
+                  <button class="btn btn-block text-white bg-[#1DD100] hover:bg-[#1DD100]" id="nextButton" onclick="successModal.showModal()">
+                    Next
+                  </button>
                 <div class="text-gray-400 text-sm flex justify-evenly mt-4">
                   <a class="underline underline-offset-4" href="#">Terms and Conditions</a>
                   <a class="underline underline-offset-4" href="#">Cancellation Policy</a>
@@ -415,6 +415,32 @@
       </div>
     </div>
   </footer>
+  <dialog class="modal" id="successModal">
+    <div class="modal-box">
+      <div class="modal-header grid justify-items-center px-8">
+        <!-- <div class="check-mark text-3xl mb-4"></div> -->
+        <div class="sucess_check-mark">
+          <div class="check-mark"></div>
+        </div>
+        <h2 class="text-2xl text-[#27AE60] font-bold mt-4">Success</h2>
+      </div>
+      <div class="modal-body text-center px-8">
+        <p class="text-[#4A4A4A] mb-2 font-bold">
+          Thank you for Booking Our Bus Seats. We are working hard to find the
+          best service and deals for you.
+        </p>
+        <p>Shortly you will find a confirmation in your email.</p>
+      </div>
+      <div class="modal-action justify-center">
+        <button
+          class="btn w-[70%] bg-[#27AE60] rounded-3xl text-white h-12 font-bold text-2xl hover:bg-[#1DD100]"
+          onclick="continueBooking()"
+        >
+          Continue
+        </button>
+      </div>
+    </div>
+  </dialog>
 
   <!-- success Section -->
   <section class="bg-[#F2F1F1] h-screen flex justify-center items-center hidden">
